@@ -245,7 +245,7 @@ if java_parsing:
             # If that's an inner class which is declared in a method, it
             # requires an index prepended to the class-name, e.g.
             # 'Foo$1Inner'
-            # http://scons.tigris.org/issues/show_bug.cgi?id=2087
+            # https://github.com/SCons/scons/issues/2087
             if self.outer_state.localClasses and \
                 self.outer_state.stackBrackets[-1] > \
                 self.outer_state.stackBrackets[-2]+1:
