@@ -53,6 +53,7 @@ RELEASE 3.1.0.alpha.yyyymmdd - NEW DATE WILL BE INSERTED HERE
     - Updated doc terminiology: use prepend instead of append as appropriate
     - xml validity fixes from SConstruct.py change
     - update wiki links to new github location
+    - update bug links to new github location
 
   From Jonathon Reinhart:
     - Replace all instances of `int main()` in C code with `int main(void)`.
